# Claude-_code

./: .gitignore  README.md  SKILL.md  addisons-mres-research.html  ai-terms-trainer.html  index.html  pyproject.toml
.claude/skills/emil-design-eng/: SKILL.md
.claude/skills/ponytail-audit/: SKILL.md
.claude/skills/ponytail-debt/: SKILL.md
.claude/skills/ponytail-gain/: SKILL.md
.claude/skills/ponytail-help/: SKILL.md
.claude/skills/ponytail-review/: SKILL.md
.claude/skills/review-animations/: SKILL.md
.github/workflows/: pages.yml
examples/ai-health-psychology-review/: extraction-table.md  library.bib  library.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infographic/: index.html
src/paper_search/: __init__.py  cli.py  http.py  models.py  registry.py
src/paper_search/sources/: __init__.py  arxiv.py  base.py  crossref.py  europepmc.py  misc.py  openalex.py  pubmed.py  semantic.py  unpaywall.py
tests/: test_offline.py
